overflow fix
added display-inline to make overflow hidden work

--- a/src/sass/_buttons.scss
+++ b/src/sass/_buttons.scss
@@ -2,6 +2,7 @@
   @include body_regular();
   background-color: $blue;
   color: $white;
+		display: inline-block;
   font-size: 14px;
   overflow: hidden;
   min-width: 220px;
@@ -27,6 +28,7 @@
       display: block;
       background-color: $blue;
       content: '';
+						font-size: 0;
       height: 100%;
       left: -2px;
       position: absolute;
